Made the nav bar fixed, can't find a way to move the page down without moving the nav bar or leaving background pic behind

--- a/Resources/styles.css
+++ b/Resources/styles.css
@@ -6,15 +6,19 @@
     font-size: 22px;
     color: seashell;
     text-align: center;
+    margin: 0;
+    padding: 0;
 }
 
 header {
-    display: inline-flex;
+    display: flex;
     height: 69px;
     border-bottom: 1px solid seashell;
     width: 100%;
-    margin: 0;
+    position: fixed;
+    z-index: 1;
 }
+
 .logo {
   height: 50px;
   width: auto;
@@ -30,6 +34,7 @@ header {
     align-items: center;
     justify-content: flex-end;
     margin-left:  760px;
+    padding-top: 1rem;
 }
 
 ul li {
@@ -52,7 +57,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   overflow: hidden;
-  margin: 0 auto;
+  margin: 0% auto;
 }
 
 h2 {
@@ -77,7 +82,7 @@ h2 {
     align-content: center;
     height: max-content;
     width: 100%;
-    margin-top: 20%;
+    margin-top: 22%;
   }
 
 .feature {
